--- a/DesktopUI/Views/LoginView.xaml
+++ b/DesktopUI/Views/LoginView.xaml
@@ -18,6 +18,7 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
         <TextBlock Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2" Margin="0 0 0 15" HorizontalAlignment="Center"
                    FontSize="48" >
@@ -31,5 +32,8 @@
         <Button Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Margin="0 0 0 15" x:Name="LogIn">
             Login
         </Button>
+        <TextBlock x:Name="ErrorMessage" Grid.Row="4" Grid.Column="1" Grid.ColumnSpan="2" MaxWidth="300" 
+                   TextWrapping="Wrap" Foreground="Red"
+                   Visibility="{Binding IsErrorVisible, Converter={StaticResource BooleanToVisibilityConverter}, FallbackValue=Collapsed}"></TextBlock>
     </Grid>
 </UserControl>
